# my-flow

./: .gitignore  CMakeLists.txt  CMakePresets.json  DEVELOPMENT.md  README.md  install.sh  uninstall.sh  wispr-flow-plan.md  wispr-flow.desktop
resources/: Info.plist.in  resources.qrc
resources/icons/: AppIcon.icns
src/: Application.cpp  Application.h  AudioCapture.cpp  AudioCapture.h  AudioEncoder.cpp  AudioEncoder.h  GlobalHotkey.cpp  GlobalHotkey.h  GroqApiService.cpp  GroqApiService.h  OverlayWidget.cpp  OverlayWidget.h  Settings.cpp  Settings.h  SettingsDialog.cpp  SettingsDialog.h  TextInjector.cpp  TextInjector.h  TranscriptionService.h  TrayIcon.cpp  TrayIcon.h  WhisperApiService.cpp  WhisperApiService.h  main.cpp
